#pragma once
#include "Transform.h"
#include "glm/fwd.hpp"


class Camera {
public:
    Camera();

    Transform transform;
    float zoom;
    glm::vec4 backgroundColor;

    glm::mat4 GetProjectionMatrix() const;
    glm::vec2 ScreenToWorld(const glm::vec2& screenPos) const;
    glm::vec2 WorldToScreen(const glm::vec2& worldPos) const;
    glm::vec2 ScreenToUV(const glm::vec2& worldPos) const;

    // Cereal serialization
    template<class Archive>
    void serialize(Archive& ar) {
        ar(transform, zoom, backgroundColor);
    }
};
